[package]
name = "illusion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "illusion"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if      = "1"
winit       = "0.26"
env_logger  = "0.9"
log         = "0.4"
wgpu        = "0.12"
pollster    = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook    = "0.1.6"
console_log                 = "0.2.0"
wasm-bindgen                = "0.2.76"
wasm-bindgen-futures        = "0.4.30"
js-sys                      = "0.3.57"
bevy_ecs                    = "0.7.0"

wgpu    = { version = "0.12",   features = ["webgl"]}
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}